exam module completed

--- a/themes/default/common/sidenav.html
+++ b/themes/default/common/sidenav.html
@@ -65,11 +65,11 @@
                     <ul class="collapse" id="exam">
 
                         <li class="sub-menu">
-                            <a href="{{ app.url }}/exam/search"><i class="la la-search"></i><span>&nbsp;Search</span></a>
+                            <a href="{{ app.url }}/exam/search"><i class="la la-search"></i><span>&nbsp;Search Schedules</span></a>
                         </li>
                         
                         <li class="sub-menu">
-                            <a href="{{ app.url }}/exam/create"><i class="la la-plus-circle"></i><span>&nbsp;Create Schedule</span></a>
+                            <a href="{{ app.url }}/exam/create"><i class="la la-plus-circle"></i><span>&nbsp;Create Exam / Schedule</span></a>
                         </li>
                         
                     </ul>
