--- a/themes/default/school/index.html
+++ b/themes/default/school/index.html
@@ -455,7 +455,7 @@
                 </div>
 
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-primary" onClick="addclass();">Save changes</button>
+                    <button type="button" class="btn btn-primary" onClick="addclass();">Create</button>
                 </div>
 
             </div>
@@ -542,7 +542,7 @@
                 </div>
 
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-primary" onClick="addgrade();">Save changes</button>
+                    <button type="button" class="btn btn-primary" onClick="addgrade();">Create</button>
                 </div>
 
             </div>
@@ -610,7 +610,7 @@
                 </div>
 
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-primary" onClick="addreligion();">Save changes</button>
+                    <button type="button" class="btn btn-primary" onClick="addreligion();">Create</button>
                 </div>
 
             </div>
@@ -685,7 +685,7 @@
                 </div>
 
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-primary" onClick="addsubject();">Save changes</button>
+                    <button type="button" class="btn btn-primary" onClick="addsubject();">Create</button>
                 </div>
 
             </div>
@@ -760,7 +760,7 @@
                 </div>
 
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-primary" onClick="addrelation();">Save changes</button>
+                    <button type="button" class="btn btn-primary" onClick="addrelation();">Create</button>
                 </div>
 
             </div>
@@ -822,7 +822,7 @@
                     </div>
 
                     <div class="modal-footer">
-                        <button type="button" class="btn btn-primary" onClick="addexam_type();"> Save changes </button>
+                        <button type="button" class="btn btn-primary" onClick="addexam_type();"> Create </button>
                     </div>
                 </form>
             </div>
@@ -884,7 +884,7 @@
                     </div>
 
                     <div class="modal-footer">
-                        <button type="button" class="btn btn-primary" onClick="addsport();"> Save changes </button>
+                        <button type="button" class="btn btn-primary" onClick="addsport();"> Create </button>
                     </div>
                 </form>
             </div>
@@ -946,7 +946,7 @@
                     </div>
 
                     <div class="modal-footer">
-                        <button type="button" class="btn btn-primary" onClick="addstaff_category();"> Save changes </button>
+                        <button type="button" class="btn btn-primary" onClick="addstaff_category();"> Create </button>
                     </div>
                 </form>
             </div>
@@ -1019,7 +1019,7 @@
                     </div>
 
                     <div class="modal-footer">
-                        <button type="button" class="btn btn-primary" onClick="addstaff_type();"> Save changes </button>
+                        <button type="button" class="btn btn-primary" onClick="addstaff_type();"> Create </button>
                     </div>
                 </form>
             </div>
@@ -1098,7 +1098,7 @@
                     </div>
 
                     <div class="modal-footer">
-                        <button type="button" class="btn btn-primary" onClick="adduser_role();"> Save changes </button>
+                        <button type="button" class="btn btn-primary" onClick="adduser_role();"> Create </button>
                     </div>
                 </form>
             </div>
