--- a/themes/default/student/add.html
+++ b/themes/default/student/add.html
@@ -445,7 +445,7 @@
                         })
                     } else {
                         console.log(res);
-                        alertify.alert(res.error);
+                        alertify.alert("Warning",res.error);
                     }
                 },
                 error: (e) => {
