--- a/themes/default/exam/search.html
+++ b/themes/default/exam/search.html
@@ -135,8 +135,8 @@
                                         <td class="text-center">{{ exam_schedule.venue }}</td>
                                         <td class="text-center">{{ exam_schedule.instructions }}</td>
                                         <td>
-                                            <div class="col-12 text-center">
-                                                    <button class="btn btn-sm btn-warning" onclick="exam.schedule.edit('{{ exam_schedule.id }}')">Edit</button>
+                                            <div class="col-12 text-right">
+                                                    <button class="btn btn-sm btn-warning" onclick="exam.schedule.invokeExamScheduleEditModal('{{ exam_schedule.id }}', '{{ exam_schedule.venue }}', '{{ exam_schedule.instructions }}')"><i class="la la-edit"></i></button>
                                                     <button onclick="exam.schedule.remove('{{ exam_schedule.id }}','{{ exam_schedule.date }}')" class="btn btn-sm btn-danger"><i class="la la-trash"></i></button>
                                                 </div>
                                             </div>
@@ -169,7 +169,7 @@
         </div>
     </div>
 
-    <!-- START : MODAL Edit / Remove Exams -->
+    <!-- START : MODAL EDIT / REMOVE EXAMS -->
     <div class="modal fade" id="edit-exam" tabindex="-1" role="dialog" aria-labelledby="edit-exam-title" aria-hidden="true">
         <div class="modal-dialog modal-xl modal-dialog-centered" role="document">
             <div class="modal-content">
@@ -204,7 +204,7 @@
                                     <td>
                                         <div class="row">
                                             <div class="col-12 text-center">
-                                                <button class="btn btn-sm btn-warning" onclick="exam.edit('{{ exam.id }}');">Edit</button>
+                                                <button class="btn btn-sm btn-warning" onclick="exam.invokeExamEditModal('{{ exam.id }}','{{ exam.type_id }}','{{ exam.year }}','{{ exam.venue }}','{{ exam.instructions }}');"><i class="la la-edit"></i></button>
                                                 <button type="button" class="btn btn-sm btn-danger" onclick="exam.remove('{{ exam.id }}');"><i class="la la-trash"></i></button>
                                             </div>
                                         </div>
@@ -219,7 +219,116 @@
             </div>
         </div>
     </div>
-    <!-- END : MODAL Edit / Remove Exams -->
+    <!-- END : MODAL EDIT / REMOVE EXAMS -->
+
+    <!-- START : MODAL EDIT EXAM -->
+    <div class="modal fade" id="modal_editexam" tabindex="-1" role="dialog" aria-labelledby="modal_editexam-title" aria-hidden="true">
+        <div class="modal-dialog modal-xl modal-dialog-centered" role="document">
+            <div class="modal-content">
+
+                <div class="modal-header">
+                    <h5 class="modal-title"> EDIT EXAM </h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                </div>
+
+                <div class="modal-body">
+                    <input type="hidden" id="modal-edit-exam-id" />
+                    <form method="post">
+
+                        <div class="form-row">
+                            <div class="col-2">
+                                <div class="form-group">
+                                    <label for="examyear"> Year </label>
+                                    <select id="modal-edit-exam-year" class="form-control">
+                                        <option selected disabled> - Select - </option>
+                                        {% for year in years %}
+                                            <option value="{{ year }}"> {{ year }} </option>
+                                        {% endfor %}
+                                    </select>
+                                </div>
+                            </div>
+
+                            <div class="col-4">
+                                <div class="form-group">
+                                    <label for="examtype"> Exam type </label>
+                                    <select class="form-control" id="modal-edit-exam-type_id">
+                                        <option selected disabled> - Select Exam Type - </option>
+                                        {% for exam_type in exam_types %}
+                                            <option value="{{ exam_type.id }}"> {{ exam_type.name }} </option>
+                                        {% endfor %}
+                                    </select>
+                                </div>
+                            </div>
+
+                            <div class="col-6">
+                                <div class="form-group">
+                                    <label for="venue"> Venue </label>
+                                    <input type="text" class="form-control" id="modal-edit-exam-venue"/>
+                                </div>
+                            </div>
+
+                            <div class="col-12">
+                                <div class="form-group">
+                                    <label for="exam_instructions"> Instructions </label>
+                                    <textarea class="md-textarea form-control" id="modal-edit-exam-instructions" rows="4" placeholder="type exam instructions here.."></textarea>
+                                </div>
+                            </div>
+                        </div>
+
+                    </form>
+                </div>
+
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-primary" onclick="exam.edit();">Save changes</button>
+                </div>
+
+            </div>
+        </div>
+    </div>
+    <!-- END : MODAL EDIT EXAM -->
+
+    <!-- START : MODAL EDIT EXAM SCHEDULE -->
+    <div class="modal fade" id="modal_editexamschedule" tabindex="-1" role="dialog" aria-labelledby="modal_editexamschedule-title" aria-hidden="true">
+        <div class="modal-dialog modal-xl modal-dialog-centered" role="document">
+            <div class="modal-content">
+
+                <div class="modal-header">
+                    <h5 class="modal-title"> EDIT EXAM SCHEDULE </h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                </div>
+
+                <div class="modal-body">
+                    <input type="hidden" id="modal-edit-exam-schedule-id" />
+                    <form method="post">
+
+                        <div class="form-row">
+
+                            <div class="col-12">
+                                <div class="form-group">
+                                    <label for="venue"> Venue </label>
+                                    <input type="text" class="form-control" id="modal-edit-exam-schedule-venue"/>
+                                </div>
+                            </div>
+
+                            <div class="col-12">
+                                <div class="form-group">
+                                    <label for="exam_instructions"> Instructions </label>
+                                    <textarea class="md-textarea form-control" id="modal-edit-exam-schedule-instructions" rows="4" placeholder="type exam instructions here.."></textarea>
+                                </div>
+                            </div>
+                        </div>
+
+                    </form>
+                </div>
+
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-primary" onclick="exam.schedule.edit();">Save changes</button>
+                </div>
+
+            </div>
+        </div>
+    </div>
+    <!-- END : MODAL EDIT EXAM SCHEDULE -->
 
 {{ template.footer|raw }}
 
@@ -228,10 +337,24 @@
         // START : SCRIPT FOR EXAM
         var exam = {
 
-            edit: (examId) => {
+            // INVOKE EXAM EDIT MODAL
+            invokeExamEditModal: (id,type_id,year,venue,instructions) => {
+                $("#modal-edit-exam-id").val(id)
+                $("#modal-edit-exam-type_id").val(type_id)
+                $("#modal-edit-exam-year").val(year)
+                $("#modal-edit-exam-venue").val(venue)
+                $("#modal-edit-exam-instructions").val(instructions)
+                $("#modal_editexam").modal("show")
+            },
+
+            edit: () => {
 
                 var formData = new FormData;
-                formData.append("exam_id", examId)
+                formData.append('id', $("#modal-edit-exam-id").val())
+                formData.append('type_id', $("#modal-edit-exam-type_id").val())
+                formData.append('year', $("#modal-edit-exam-year").val())
+                formData.append('venue', $("#modal-edit-exam-venue").val())
+                formData.append('instructions', $("#modal-edit-exam-instructions").val())
 
                 $.ajax({
                     url: "{{ app.url }}/exam/ajax_edit_exam",
@@ -288,16 +411,26 @@
             },
 
             schedule: {
+
+                // INVOKE EXAM EDIT MODAL
+                invokeExamScheduleEditModal: (id,venue,instructions) => {
+                    $("#modal-edit-exam-schedule-id").val(id)
+                    $("#modal-edit-exam-schedule-venue").val(venue)
+                    $("#modal-edit-exam-schedule-instructions").val(instructions)
+                    $("#modal_editexamschedule").modal("show")
+                },
+
                 edit: (id,date) => {
 
                     // PAYLOAD
                     let formData = new FormData
-                    formData.append('id', id)
-                    formData.append('date', date)
+                    formData.append('id', $("#modal-edit-exam-schedule-id").val())
+                    formData.append('venue', $("#modal-edit-exam-schedule-venue").val())
+                    formData.append('instructions', $("#modal-edit-exam-schedule-instructions").val())
 
                     // AJAX
                     $.ajax({
-                        url: "{{ app.url }}/exam/ajax_edit_examschedule",
+                        url: "{{ app.url }}/exam/ajax_edit_exam_schedule",
                         method: 'POST',
                         data: formData,
                         processData: false,
@@ -305,7 +438,7 @@
                         dataType: 'json',
                         success: Response => {
                             if ( Response.status === 'success' ) {
-                                alertify.alert("Success", "Schedule Deleted Successfully").set({
+                                alertify.alert("Success", "Exam Schedule Modified Successfully").set({
                                     'closable': false,
                                     'onok': () => {
                                         location.reload()
