result/add completed

--- a/themes/default/result/add.html
+++ b/themes/default/result/add.html
@@ -145,8 +145,8 @@
                                             <td>{{ exam_schedule.name }}</td>
                                             <td>{{ exam_schedule.exam_name }}</td>
                                             <td>{{ exam_schedule.subject }}</td>
-                                            <td class="text-center">{{ exam_schedule.marks }}</td>
-                                            <td><button type="button" class="btn btn-sm btn-warning">Insert</button></td>
+                                            <td class="text-center"><input type="text" class="form-control form-control-sm" id="marks" placeholder="{{ exam_schedule.marks }}"/></td>
+                                            <td><button type="button" class="btn btn-sm btn-warning" onclick="addresult('{{ exam_schedule.id }}')">Save</button></td>
                                         </tr>
                                         {% endfor %}
                                     </tbody>
@@ -186,6 +186,43 @@
         $(document).ready(function() {
             $('#table_results_mark').DataTable();
         } );
+
+        // START : ADD A RESULT
+        addresult = (id) => {
+
+            // PAYLOAD
+            var formData = new FormData;
+
+            // ADD CLASS DATA
+            formData.append('id', id)
+            formData.append('marks', $("#marks").val())
+
+            // REQUEST
+            $.ajax({
+                url: "{{ app.url }}/result/ajax_addresult",
+                method: 'POST',
+                data: formData,
+                processData: false,
+                contentType: false,
+                dataType: 'json',
+                success: (res) => {
+                    
+                    if ( res.status == 'success' ) {
+                        alertify.alert("Success", "Result added successfully ... ").set('onok', function() {
+                            location.reload();
+                        })
+                    } else {
+                        console.log(res);
+                        alertify.alert("Failed", res.message);
+                    }
+                },
+                error: (e) => {
+                    alertify.alert("Error", "Something went wrong ... ");
+                    console.log(e.responseText)
+                }
+            })
+        }
+        // END : ADD A RESULT
     </script>
 
     <script>
