health record edit icon modification

--- a/themes/default/health/add.html
+++ b/themes/default/health/add.html
@@ -205,14 +205,14 @@
                                     <tr>
                                         <th width="1%" class="text-center" scope="col">ID</th>
                                         <th scope="col">Name</th>
-                                        <th class="text-center" scope="col">Height <br/> (cm)</th>
-                                        <th class="text-center" scope="col">Weight <br/> (kg)</th>
-                                        <th class="text-center" scope="col">Heart rate <br/> (bpm)</th>
-                                        <th class="text-center" scope="col">Blood Pressure</th>
-                                        <th class="text-center" scope="col">Blood Group</th>
+                                        <th width="1%" class="text-center" scope="col">Height <br/> (cm)</th>
+                                        <th width="1%" class="text-center" scope="col">Weight <br/> (kg)</th>
+                                        <th width="1%" class="text-center" scope="col">Heart rate</th>
+                                        <th width="1%" class="text-center" scope="col">Blood Pressure</th>
+                                        <th width="1%" class="text-center" scope="col">Blood Group</th>
                                         <th scope="col">Speciality</th>
                                         <th scope="col">Vaccination</th>
-                                        <th class="text-center" scope="col">Date</th>
+                                        <th width="1%" class="text-center" scope="col">Date</th>
                                     </tr>
                                 </thead>
 
