sport assign multiple assign completed

--- a/themes/default/common/sidenav.html
+++ b/themes/default/common/sidenav.html
@@ -249,11 +249,7 @@
                         </li>
 
                         <li class="sub-menu">
-                            <a href="{{ app.url }}/user/permission"><i class="la la-user"></i><span>&nbsp;Role Permissions</span></a>
-                        </li>
-                        
-                        <li class="sub-menu">
-                            <a href="{{ app.url }}/user/add"><i class="la la-user-plus"></i><span>&nbsp;Add New</span></a>
+                            <a href="{{ app.url }}/user/permission"><i class="la la-user"></i><span>&nbsp;Role/Permissions</span></a>
                         </li>
                         
                     </ul>
