--- a/themes/default/staff/search.html
+++ b/themes/default/staff/search.html
@@ -199,12 +199,11 @@
                                 <thead class="thead-dark">
                                     <tr>
                                         <th width="1%" class="text-center" scope="col">ID</th>
-                                        <th width="10%" class="text-center" scope="col">Admission</th>
-                                        <th width="1%" class="text-center" scope="col">Class</th>
-                                        <th width="10%" class="text-center" scope="col">DoB</th>
-                                        <th width="5%" class="text-center" scope="col">Gender</th>
+                                        <th width="10%" scope="col">Admission</th>
+                                        <th width="15%" scope="col">Type</th>
+                                        <th width="5%" scope="col">Gender</th>
                                         <th scope="col">Name</th>                                    
-                                        <th width="12%" class="text-center" scope="col">&nbsp;</th>
+                                        <th width="12%" class="text-right" scope="col">&nbsp;</th>
                                     </tr>
                                 </thead>
 
@@ -212,12 +211,11 @@
                                     {% for staff in staffs %}
                                         <tr>
                                             <th class="text-center" scope="row">{{ staff.id }}</th>
-                                            <td class="text-center">{{ staff.admission_no }}</td>
-                                            <td class="text-center">{{ staff.class }}</td>
-                                            <td class="text-center">{{ staff.dob }}</td>
-                                            <td class="text-center">{{ staff.gender }}</td>
+                                            <td>{{ staff.employee_no }}</td>
+                                            <td>{{ staff.type }}</td>
+                                            <td>{{ staff.gender }}</td>
                                             <td> {{ staff.name }}</td>                                        
-                                            <td class="text-center"><a href="{{ app.url }}/staff/profile"><button type="button" class="btn btn-xs btn-success"><i class="la la-user"></i>View Profile</button></a></td>
+                                            <td><a href="{{ app.url }}/staff/profile"><button type="button" class="btn btn-xs btn-success"><i class="la la-user"></i>View Profile</button></a></td>
                                         </tr>
                                     {% endfor %}
                                 </tbody>
