sport search module completed

--- a/themes/default/school/index.html
+++ b/themes/default/school/index.html
@@ -1122,14 +1122,14 @@
 
                         <div class="col-12">
                             <div class="form-group">
-                                <label for="grade">Role Name</label>
+                                <label>Role Name</label>
                                 <input type="text" class="form-control" id="modal-edit-user_role-name"/>
                             </div>
                         </div>
 
                         <div class="col-12">
                             <div class="form-group">
-                                <label for="grade">Role Description</label>
+                                <label>Role Description</label>
                                 <input type="text" class="form-control" id="modal-edit-user_role-description"/>
                             </div>
                         </div>
