added topmenu to student portal

--- a/themes/default/portal/student.html
+++ b/themes/default/portal/student.html
@@ -5,9 +5,13 @@
     <div class="container-fluid portal">
         <div class="row">
 
+            <div class="col-md-12">
+                
+                {{ template.topmenu|raw }}
+            </div>
+
             <div class="col-md-8 mx-auto content">
                                
-                {{ template.topmenu|raw }}
 
                 <div class="stuprofile stuportal">
 
