messages inbox partially designed

--- a/themes/default/common/header.html
+++ b/themes/default/common/header.html
@@ -57,6 +57,7 @@
 	<link rel="stylesheet" type="text/css" href="{{ app.url }}/themes/{{ app.theme }}/assets/css/style-timetable.css" />
 	<link rel="stylesheet" type="text/css" href="{{ app.url }}/themes/{{ app.theme }}/assets/css/style-user.css" />
 	<link rel="stylesheet" type="text/css" href="{{ app.url }}/themes/{{ app.theme }}/assets/css/style-portal.css" />
+	<link rel="stylesheet" type="text/css" href="{{ app.url }}/themes/{{ app.theme }}/assets/css/style-messages.css" />
 
 {% for style in styles %}
 	<!-- CSS : CUSTOM -->
