disable chrome translate

--- a/themes/default/common/header.html
+++ b/themes/default/common/header.html
@@ -7,6 +7,9 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 	<link rel="shortcut icon" type="image/x-icon" href="{{ app.url }}/themes/{{ app.theme }}/assets/img/favicon.ico" />
 
+	<!-- GOOGLE -->
+	<meta name="google" content="notranslate" />
+
 	<!-- LIBS : CSS / LA -->
 	<link rel="stylesheet" type="text/css" href="{{ app.url }}/themes/{{ app.theme }}/assets/libs/bts/css/bootstrap.min.css" />
 	<link rel="stylesheet" type="text/css" href="{{ app.url }}/themes/{{ app.theme }}/assets/libs/la/css/line-awesome.min.css" />
